fixed stuck tooltips on desktop

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -686,7 +686,7 @@ footer {
     }
 
     @include mixins.on-desktop {
-        &:hover, &.hovered {
+        &:hover {
             > span {
                 opacity: 1;
             }
